# work2

./: .pre-commit-config.yaml  COMPANY_NAME_EXTRACTOR.py  COMPLETE_SOLUTION_SUMMARY.md  COMPREHENSIVE_EUROPEAN_HEALTHCARE_DATABASE_SUMMARY.md  DELIVERY_SUMMARY.md  DISCOVERED_COMPANIES_20250721_110621.csv  DISCOVERED_COMPANIES_20250721_110621.json  DISCOVERED_URLS_20250721_144405.csv  DISCOVERED_URLS_20250721_144405.json  DISCOVERED_URLS_FOR_MEGA_20250721_110831.json  DYNAMIC_MEGA_EUROPEAN_HEALTHCARE_DATABASE_20250721_113149.csv  DYNAMIC_MEGA_EUROPEAN_HEALTHCARE_DATABASE_20250721_113149.json  DYNAMIC_MEGA_EUROPEAN_HEALTHCARE_DATABASE_20250721_125623.csv  DYNAMIC_MEGA_EUROPEAN_HEALTHCARE_DATABASE_20250721_125623.json  DYNAMIC_MEGA_HEALTHCARE_DATABASE.py  DYNAMIC_RESEARCH_DISCOVERY.py  DYNAMIC_WORKFLOW_GUIDE.md  ENHANCED_DISCOVERY_HEALTHCARE_DATABASE.py  ENHANCED_HEALTHCARE_DATABASE_WITH_LOCATIONS_20250721_125857.csv  ENHANCED_HEALTHCARE_DATABASE_WITH_LOCATIONS_20250721_125857.json  ENHANCED_PROCESSING_SUMMARY_20250721_131701.json  ENHANCED_SOLUTION.md  EUROPEAN_HEALTHCARE_DATABASE_FINAL.md  EUROPEAN_HEALTHCARE_EXACT_PRODUCTS_20250721_131701.csv  EVENTLOOP_FIX.md  EXTRACTION_IMPROVEMENTS.md  EXTRACTION_SUMMARY.md  FINAL_EUROPEAN_HEALTHCARE_SUMMARY.md  FINAL_RESULTS_SUMMARY.md  FINAL_SYSTEM_SUMMARY.md  FIXES_APPLIED.md  FIX_SUMMARY.md  GERMAN_HEALTHCARE_WITH_PRODUCTS_20250721_130812.csv  HOW_I_FOUND_500_COMPANIES.md  HOW_TO_USE.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_SUMMARY.md  LICENSE  LOCATION_EXTRACTION_SUMMARY.md  (+257 more)
output/: advanced_quality_report.txt  (+25 more)
(+51 files in other folders)
